AI tank movement and rotation working

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=59868378C140222EE6ABF9988A6F6F0C
+CopyrightNotice=Copyright Braden Altstatt
+
